[gd_scene load_steps=10 format=2]

[ext_resource path="res://assets/Retro Gaming.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://assets/Tutorial/Pause/ReturnArrow.png" type="Texture" id=2]
[ext_resource path="res://assets/Tutorial/Pause/Box.png" type="Texture" id=3]
[ext_resource path="res://assets/Tutorial/Pause/PlayArrow.png" type="Texture" id=4]
[ext_resource path="res://scripts/Pause.gd" type="Script" id=5]
[ext_resource path="res://assets/Tutorial/Config/Gear.png" type="Texture" id=6]

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0, 0, 0, 0.45098 )

[sub_resource type="DynamicFont" id=1]
size = 64
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 40
font_data = ExtResource( 1 )

[node name="Pause" type="Node2D"]
pause_mode = 2
script = ExtResource( 5 )

[node name="Darkener" type="Panel" parent="."]
margin_right = 1280.0
margin_bottom = 720.0
custom_styles/panel = SubResource( 3 )

[node name="Box" type="Sprite" parent="."]
position = Vector2( 629, 337 )
texture = ExtResource( 3 )

[node name="PlayArrow" type="Sprite" parent="."]
position = Vector2( 433, 237 )
texture = ExtResource( 4 )

[node name="Gear" type="Sprite" parent="."]
position = Vector2( 428, 386 )
scale = Vector2( 0.613636, 0.613636 )
texture = ExtResource( 6 )

[node name="ReturnArrow" type="Sprite" parent="."]
position = Vector2( 439, 535 )
texture = ExtResource( 2 )

[node name="Level" type="Label" parent="."]
margin_left = 502.0
margin_top = 77.0
margin_right = 778.0
margin_bottom = 159.0
custom_fonts/font = SubResource( 1 )
text = "Level 1"

[node name="Play" type="Button" parent="."]
margin_left = 522.0
margin_top = 207.0
margin_right = 785.0
margin_bottom = 264.0
custom_fonts/font = SubResource( 2 )
text = "Continuar"
flat = true

[node name="Settings" type="Button" parent="."]
margin_left = 461.0
margin_top = 356.0
margin_right = 848.0
margin_bottom = 413.0
custom_fonts/font = SubResource( 2 )
text = "Configurações"
flat = true

[node name="MainMenu" type="Button" parent="."]
margin_left = 465.0
margin_top = 505.0
margin_right = 843.0
margin_bottom = 562.0
custom_fonts/font = SubResource( 2 )
text = "Menu Principal"
flat = true

[connection signal="pressed" from="Play" to="." method="_on_Play_pressed"]
[connection signal="pressed" from="Settings" to="." method="_on_Settings_pressed"]
[connection signal="pressed" from="MainMenu" to="." method="_on_MainMenu_pressed"]
